--- a/packages.tex
+++ b/packages.tex
@@ -12,7 +12,8 @@
 \usepackage{slashed}
 \usepackage{cancel}
 \usepackage{geometry}
-\usepackage{feynmp-auto}
+% \usepackage{feynmp-auto}
+\usepackage{diagbox} % 用于在表格单元格画斜线
 \makeatletter
 \def\input@path{{./texmf/}}
 \makeatother
