--- a/path-integral.tex
+++ b/path-integral.tex
@@ -1,5 +1,5 @@
 \section{路径积分}
-在本节我们介绍另外一种导出Feynman规则的方法, 也就是Feynman所提出的路径积分方法. 需要注意, 本节我们的推导基于Heisenberger绘景.
+在本节我们介绍另外一种导出Feynman规则的方法, 也就是Feynman所提出的路径积分方法. 需要注意, 本节我们的推导基于Heisenberg绘景.
 
 \subsection{单粒子路径积分}
 我们首先考虑经典量子力学中的路径积分表述. 所谓路径积分, 就是考虑粒子在所有可能传播路径的贡献, 然后将它们加起来. 这听起来是一个疯狂的想法, 但是我们在经典物理中可以找到一个简单的Motivation: 双缝干涉实验. 我们知道基尔霍夫衍射公式, 它将边界态的所有点发出的光线求和, 从而得到光场分布, 如果我们再进一步, 考虑光线的所有贡献路径, 那么就是路径积分.
