--- a/reference.bib
+++ b/reference.bib
@@ -131,3 +131,11 @@
   pages={180--183},
   chapter={7}
 }
+@book{SchroederGamma,
+  title={{An Introduction to Thermal Physics}},
+  author={Daniel V. Schroeder},
+  year={2022},
+  publisher={Pearson Education Inc.},
+  pages={290--291},
+  chapter={Appendix B}
+}
